2009-01-08  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: completely support subscription using
	full JID (EJAB-701)
	* src/mod_pubsub/node_default.erl: Likewise

	* src/mod_pubsub/node_default.erl: any entity can retrieve item when
	node access model is "open" (thanks to Myers Carpenter)(EJAB-836)

2009-01-07  Badlop  <badlop@process-one.net>

	* src/mod_roster.erl: Show hyperlinks to local contacts when
	browsing roster of account in Web Admin (EJAB-480)
	* src/mod_roster_odbc.erl: Likewise

	* src/web/ejabberd_web_admin.erl: WebAdmin serves Guide and links
	to related sections; the path to guide.html can be configured with
	option doc_path (EJAB-837)
	* src/web/ejabberd_web_admin.hrl: Likewise
	* src/mod_shared_roster.erl: Likewise
	* doc/guide.tex: Likewise
	* doc/guide.html: Likewise

2009-01-06  Badlop  <badlop@process-one.net>

	* src/msgs/ru.po: Fix typo (thanks to Dominges)
	* src/msgs/ru.msg: Likewise

2009-01-05  Alexey Shchepin  <alexey@process-one.net>

	* src/tls/tls_drv.c: Added a flag to avoid certificate validation
	* src/tls/tls.erl: Likewise
	* src/ejabberd_c2s.erl: Likewise

2009-01-03  Badlop  <badlop@process-one.net>

	* src/*.erl: Fix EDoc comments

2009-01-03  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: deliver notification depending on
	presence-based-delivery configuration (EJAB-827). notification code
	rewrite.

	* src/mod_pubsub/mod_pubsub.erl: code cleanning, minor bugfixes
	* src/mod_pubsub/node_default.erl: Likewise
	* src/mod_pubsub/node_pep.erl: Likewise
	* src/mod_pubsub/pubsub.hrl: Likewise

	* src/mod_pubsub/mod_pubsub.erl: prevent subscribing with full jid,
	waiting for full jid support (EJAB-701)

	* src/mod_pubsub/mod_pubsub.erl: use of delete-any feature instead of
	delete-nodes for delete item use case (fix from erroneous definition
	in XEP-0060)

	* src/mod_pubsub/mod_pubsub.erl: Added "access-whitelist" and