@@ -95,6 +95,7 @@ options() ->
 features() ->
     ["create-nodes",
      "delete-nodes",
+     "delete-any",
      "instant-nodes",
      "outcast-affiliation",
      "persistent-items",
