@@ -7,6 +7,15 @@
 	* src/mod_pubsub/node_default.erl: any entity can retrieve item when
 	node access model is "open" (thanks to Myers Carpenter)(EJAB-836)
 
+	* src/mod_pubsub/node.template: apply delete-any feature
+	* src/mod_pubsub/node_mb.erl: Likewise
+	* src/mod_pubsub/node_buddy.erl: Likewise
+	* src/mod_pubsub/node_private.erl: Likewise
+	* src/mod_pubsub/node_public.erl: Likewise
+	* src/mod_pubsub/node_pep.erl: Likewise
+	* src/mod_pubsub/node_default.erl: Likewise
+	* src/mod_pubsub/node_club.erl: Likewise
+
 2009-01-07  Badlop  <badlop@process-one.net>
 
 	* src/mod_roster.erl: Show hyperlinks to local contacts when
